objects/Patch_Change__e.object
<CustomObject>
    <fields>
        <fullName>Channel_Manager_Name__c</fullName>
        <label>Channel Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patch_Id__c</fullName>
        <label>Patch Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Name__c</fullName>
        <label>RSM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Patch Change</label>
    <pluralLabel>Patch Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>